--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -10,13 +10,16 @@
         <div class="inner-container">
             <h1>About Us</h1>
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
+                Shopkeepers or Enterpreneurs who are looking for a good website to start their business on online mode on a lower expences, this is the right place for you! <br> Don't have any idea of web development ? No worries ! Just drag and drop your choices and you will be provided your website in the moment you will submit your form.<br>
             </p>
-            <div class="skills">
-                <span>Web Design</span>
-                <span>Photoshop & Illustrator</span>
-                <span>Coding</span>
-            </div>
+                    <ul>
+                        <li>
+                            Choose the best template out of a bunch of various exclusive templates
+                        </li>
+                        <li>Customize it as per your taste</li>
+                        <li>Get is delivered as the submission gets over</li>
+                        <li>Convinient and very cheap for use</li>
+                    </ul>
         </div>
     </div>
 </body>
